[package]
name = "move-llvm-ir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
move-binary-format = { path = "../move-binary-format" }
move-ir-types = { path = "../move-ir/types" }
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm14-0"] }
lock_api = "0.4.9"
semver = "1.0.14"
execute = "0.2.11"
